sfdx-source/SmartVisca/main/default/objects/NameCardRenkeiJyoken__c/NameCardRenkeiJyoken__c.object-meta.xml
<CustomObject>
    <label>名刺自動連携条件設定</label>
    <nameField>
        <displayFormat>RC-{000000}</displayFormat>
        <label>連携設定</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>