sfdx-source/SmartVisca/main/default/objects/NameCardRenkeiJyoken__c/fields/BasicSetting__c.field-meta.xml
<CustomField>
    <fullName>BasicSetting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>名刺基本設定</label>
    <referenceTo>NameCardBasicSetting__c</referenceTo>
    <relationshipLabel>名刺自動連携条件設定</relationshipLabel>
    <relationshipName>BasicSetting1</relationshipName>
    <type>Lookup</type>
</CustomField>