sfdx-source/SmartVisca/main/default/objects/NameCardRenkeiJyoken__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>演算子</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Matches_next_character_string</fullName>
            </value>
            <value>
                <fullName>Does_not_match_next_character_string</fullName>
            </value>
            <value>
                <fullName>Start_with_the_following_string</fullName>
            </value>
            <value>
                <fullName>Contains_the_following_character_string</fullName>
            </value>
            <value>
                <fullName>Not_contain_the_following_character_string</fullName>
            </value>
            <value>
                <fullName>Matches_the_following_regular_expression</fullName>
            </value>
            <value>
                <fullName>＜</fullName>
            </value>
            <value>
                <fullName>＞</fullName>
            </value>
            <value>
                <fullName>＜＝</fullName>
            </value>
            <value>
                <fullName>＞＝</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>