sfdx-source/SmartVisca/main/default/objects/NameCardRenkeiJyoken__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>値</label>
    <type>TextArea</type>
</CustomField>